# rust_call_sui_move_function_example

./: Cargo.toml
examples/: event.rs  read_object.rs
src/: lib.rs  main.rs
