[package]
name = "sui_sdk_example"
version = "0.1.0"
edition = "2021"

[dependencies]
sui_sdk = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.35.0", package = "sui-sdk"}
sui_keys = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.35.0", package = "sui-keys"}
shared_crypto = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.35.0", package = "shared-crypto"}
bcs = "0.1.6"

tokio = { version="1", features=["macros"] }
futures = { version="0.3", default-features = false }
serde_json = "1"
hex = "0.4.3"
